@@ -21,6 +21,7 @@ git-annex (5.20140128) UNRELEASED; urgency=medium
     on Windows; the lock files have been sorted out.
   * Windows: Avoid using unix-compat's rename, which refuses to rename
     directories.
+  * Windows: Fix deletion of repositories by test suite and webapp.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400
 
